<resources>
    <string name="personal_info_title" translatable="false">编辑资料</string>
    <string name="personal_info_save" translatable="false">保存</string>
    <string name="personal_avatar_save" translatable="false">更换头像</string>
    <string name="system_avatar_save" translatable="false">保存头像</string>
    <string name="personal_avatar_edit_content" translatable="false">拖拽图片调整展示区域</string>
    <string name="personal_info_hint" translatable="false">填写昵称（6字以内）</string>
    <string name="info_name" translatable="false">昵称</string>
    <string name="title_preview" translatable="false">头像预览</string>
    <string name="info_user_id" translatable="false">用户ID</string>
    <string name="head_multi_update" translatable="false">（头像可多次修改）</string>
    <string name="select_head" translatable="false">选择头像</string>
    <string name="set_nick_name_title" translatable="false">设置用户昵称</string>
    <string name="nick_name_modify_once" translatable="false">（昵称仅可修改一次）</string>
    <string name="nick_name_char_num" translatable="false">%d/7</string>
    <string name="nick_name_cannot_exceed_8_char" translatable="false">最多可输入6个字符</string>
    <string name="personal_info_system_avatar_title" translatable="false">选择系统头像</string>
    <string name="personal_info_system_avatar_change" translatable="false">更换</string>

    <string name="account_edit_name_title" translatable="false">设置昵称</string>
    <string name="user_avatar" translatable="false">个人头像</string>
    <string name="account_edit_name_input_hint" translatable="false">请输入昵称</string>
    <string name="account_edit_name_text_hint" translatable="false">一个月内仅可修改%s次昵称</string>
    <string name="account_edit_name_recommend" translatable="false">试试推荐昵称：</string>
    <string name="account_edit_name_refresh" translatable="false">换一批</string>

    <string name="login_or_reg" translatable="false">登录/注册 platformName</string>
    <string name="tip_login_reg" translatable="false">投注、现金游戏、领取奖金、聊天等</string>
    <string name="tip_login_or" translatable="false">或</string>
    <string name="login_by_google" translatable="false">使用Google账号</string>
    <string name="login_by_facebook" translatable="false">使用Facebook账号</string>
    <string name="login_by_x" translatable="false">使用X账号</string>
    <string name="login_by_line" translatable="false">使用Line账号</string>
    <string name="login_by_tel" translatable="false">使用Telegram账号</string>
    <string name="login_by_key" translatable="false">使用通行密钥(仅登录)</string>
    <string name="tip_agree" translatable="false">继续则表示你同意我们的服务条款和隐私政策</string>
    <string name="btn_login_reg" translatable="false">使用手机号码或电子邮箱</string>
    <string name="account_avatar_confirm" translatable="false">保存头像</string>
    <string name="account_avatar_up" translatable="false">头像上传中</string>
    <string name="account_avatar_delete" translatable="false">删除头像</string>
    <string name="account_close" translatable="false">取消</string>
    <string name="account_edit_name_toast_empty" translatable="false">请输入昵称</string>
    <string name="tip_copy_id">复制成功</string>
    <string name="account_edit_name_toast_limit">本月的修改次数已满，请下个月再来尝试</string>
    <string name="account_avatar_select">请选择头像</string>
    <string name="title_login_or_register" translatable="false">登录/注册</string>
    <string name="account_phone_register" translatable="false">手机号码</string>
    <string name="account_email_register" translatable="false">电子邮箱</string>
    <string name="hint_phone_number">手机号码</string>
    <string name="account_continue">继续</string>
    <string name="sms_verify_hint">输入 6 位验证码</string>
    <string name="sms_code_sent_to">验证码已发送到</string>
    <string name="account_skip">跳过</string>
    <string name="account_create_nickname">创建昵称</string>
    <string name="account_nickname_hint">你可以输入自己喜欢的昵称，之后可以再次更改。如果跳过此步骤，系统会自动为你分配昵称。</string>
    <string name="account_sms_verify_failure">验证码不正确</string>
    <string name="account_resend_sms_code">重新发送验证码</string>
    <string name="account_resend_sms_code_count_down">重新发送验证码 %ds</string>
    <string name="account_nickname_initial_input_hint" translatable="false">添加昵称</string>
    <string name="nickname_modify_failed">昵称修改失败，请稍后重试</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_register_success">注册成功</string>


</resources>