<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1E1E1E"
    android:orientation="vertical"
    app:interceptedDirection="RIGHT">


    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:text="@string/account_skip"
        android:textColor="@color/color_C0C0C0"
        android:textFontWeight="500"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_62"
        android:text="@string/account_create_nickname"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/sp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <arch.cayenne.lib.skin.widget.SkinnableTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_112"
        android:layout_marginEnd="@dimen/dp_32"
        android:text="@string/account_nickname_hint"
        android:textColor="@color/color_999999"
        android:textFontWeight="400"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>