<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_user_shape_set_dialog"
    app:layout_constraintBottom_toBottomOf="parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">




            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_confirm"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/account_avatar_confirm"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_avtar_delete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/account_avatar_delete"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:background="@color/dialog_line" />

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:gravity="center"
            android:text="@string/account_close"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>
</arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>