<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1E1E1E"
    android:orientation="vertical">

    <arch.cayenne.lib.skin.widget.SkinnableImageView
        android:id="@+id/btn_close"
        android:layout_height="@dimen/dp_24"
        android:layout_width="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_49"
        android:layout_marginStart="@dimen/dp_12"
        app:srcCompat="@drawable/bg_title_close"/>

    <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_58"
        android:orientation="vertical">

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/login_or_reg"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_26"
            android:textFontWeight="600"/>

        <arch.cayenne.lib.skin.widget.SkinnableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:gravity="center"
            android:text="@string/tip_login_reg"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_108"
            android:background="@drawable/selector_btn_login"
            android:gravity="center"
            android:text="@string/btn_login_reg"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_14">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="-4dp"
                android:text="@string/tip_login_or"
                android:gravity="center"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableView
                android:layout_width="@dimen/dp_129"
                android:layout_height="@dimen/dp_1"
                android:background="#1FFFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableView
                android:layout_width="@dimen/dp_129"
                android:layout_height="@dimen/dp_1"
                android:background="#1FFFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_google"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_meta"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_meta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_x"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_x"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_x"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_line"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_telegram"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_telgram"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_tel"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:id="@+id/btn_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/selector_btn_third">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/ic_logo_key"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_key"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>

        <arch.cayenne.lib.skin.widget.SkinnableConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_19">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_tip_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_agree"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </arch.cayenne.lib.skin.widget.SkinnableConstraintLayout>
    </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>