<?xml version="1.0" encoding="utf-8"?>
<arch.cayenne.lib.skin.widget.SkinnableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_bg"
    android:orientation="vertical">

    <arch.cayenne.lib.common.ui.view.TitleBarView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:orientation="vertical">
        >

        <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/dp_17"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@drawable/edit_name_rounded_background"
            android:gravity="center_vertical">

            <arch.cayenne.lib.common.ui.view.ClearableEditText
                android:id="@+id/ce_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/account_edit_name_input_hint"
                android:imeOptions="actionDone"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/account_edit_name_hint"
                android:textSize="14sp"
                tools:ignore="MissingConstraints" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
               android:layout_marginEnd="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_4"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/color_999999"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>

        <arch.cayenne.lib.skin.widget.SkinnableLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_marginStart="@dimen/dp_17"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="@dimen/dp_17"
            android:background="@drawable/edit_name_rounded_hint_background"
            android:gravity="center_vertical">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_38"
                android:paddingTop="@dimen/dp_1"
                android:layout_margin="@dimen/dp_11"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:text="@string/account_edit_name_text_hint"
                android:textColor="@color/color_999999"
                android:textSize="13sp" />
        </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_28"
            android:layout_marginStart="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_16">

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/account_edit_name_recommend"
                android:textColor="@color/color_999999"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <arch.cayenne.lib.skin.widget.SkinnableTextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_28"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp_29"
                android:layout_marginEnd="@dimen/dp_17"
                android:background="@drawable/account_text_rounded_background"
                android:drawableLeft="@drawable/account_vector_icon"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_7"
                android:text="@string/account_edit_name_refresh"
                android:textColor="@color/color_999999"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_18"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            tools:ignore="MissingClass" />

    </arch.cayenne.lib.skin.widget.SkinnableLinearLayout>

</arch.cayenne.lib.skin.widget.SkinnableLinearLayout>